Refactoring adminAPI
Reducing repetition.
